# ai_vengers_round2

./: README.md  config.py  image_client.py  main.py  output.json  output_script.txt  output_script_p1.txt  output_script_v2.txt  page1.json  page25.json  prompt.txt  prompt_json.txt  prompt_v2.txt  pyproject.toml  session_manager.py  test_character_generation.py  test_gen.py  test_gen_p2.py  test_gen_v2.py  test_gen_v3.py  test_generation_with_reference.py  test_generation_with_reference_merge.py  test_image_editing.py  utils.py
comic/: generate_comic.py  story.json  test.py
